Datepicker and Timepicker no longer have a capped height which caused a premature scrollbar with small height windows

--- a/sass/components/_datepicker.scss
+++ b/sass/components/_datepicker.scss
@@ -2,6 +2,7 @@
 .datepicker-modal {
   max-width: 325px;
   min-width: 300px;
+  max-height: none;
 }
 
 .datepicker-container.modal-content {
