--- a/sass/components/_timepicker.scss
+++ b/sass/components/_timepicker.scss
@@ -1,6 +1,7 @@
 /* Timepicker Containers */
 .timepicker-modal {
   max-width: 325px;
+  max-height: none;
 }
 
 .timepicker-container.modal-content {
